--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Книжный интернет магазин"
     />
-      <title>React App</title>
+      <title>Book store</title>
   </head>
   <body>
     <div id="root"></div>
